@@ -1,6 +1,7 @@
 2007-02-21  Matthias Wimmer  <m@tthias.eu>
 
-    * jabberd/mio_tls.cc: setting protocol priorities by config
+    * jabberd/mio_tls.cc: setting protocol priorities by config, TLS session
+	closure
 
 2007-02-15  Matthias Wimmer  <m@tthias.eu>
 
